--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
@@ -33,11 +36,13 @@
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "next-fonts": "^1.5.1",
+    "next-themes": "^0.4.6",
     "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
